--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "messagebank"
+name = "fakie"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 async-trait = "0.1"
+clap = { version = "4", features = ["derive"] }
 dashmap = "6"
 hickory-resolver = "0.25"
 pingora = { version = "0.4", features = ["lb", "rustls"] }
+termcolor = "1"
 
 [patch.crates-io]
 # TODO temporary fix for https://github.com/cloudflare/pingora/issues/568
