--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "fakie"
 version = "0.1.0"
 edition = "2024"
 license-file = "LICENSE"
-description = "The flaky http proxy."
+description = "The flaky web proxy."
 homepage = "https://github.com/tmeumann/fakie"
 repository = "https://github.com/tmeumann/fakie"
 readme = "README.md"
@@ -20,5 +20,6 @@ clap = { version = "4", features = ["derive"] }
 dashmap = "6"
 hickory-resolver = "0.25"
 pingora = { version = "0.5", features = ["lb", "rustls"] }
+rand = "0.9"
 termcolor = "1"
 url = "2"
